blog-section,writing,outline & trending-content

--- a/public/contact.html
+++ b/public/contact.html
@@ -7,9 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
     </head>
 
@@ -98,7 +98,7 @@
                     <div class="w-full lg:w-1/2 px-3">
                         <div class="max-w-sm">
                             <span class="text-sm text-blueGray-400">Contact Us</span>
-                            <h2 class="mt-2 text-4xl font-bold font-heading">We will be glad to hear from you!</h2>
+                            <h2 class="mt-2 text-4xl font-bold">We will be glad to hear from you!</h2>
                         </div>
                         <div class="mt-10 lg:mt-10">
                             <div class="mb-10 leading-relaxed">
