--- a/public/tools.html
+++ b/public/tools.html
@@ -7,9 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
     </head>
 
@@ -92,32 +92,32 @@
             </div>
         </header>
 
-        <section class="py-12 sm:py-16 bg-white container px-4 mx-auto">
-            <div class="max-w-7xl px-10 mx-auto sm:text-center">
+        <section class="py-8 sm:py-12 bg-white container px-4 mx-auto">
+            <div class="max-w-7xl mx-auto sm:text-center">
                 <p class="text-blue-500 font-medium uppercase">Our Suite of Tools</p>
                 <h2 class="font-bold text-3xl sm:text-4xl lg:text-5xl mt-3">Choose the one you need to brew magic.</h2>
                 <h2 class="font-bold text-2xl mt-16 mb-4 text-left">Social Media Captions</h2>
                 <hr />
                 <div class="sm-captions grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10 my-8 sm-my-8">
                     <a class="" href="caption.html">
-                        <div class="rounded-lg py-10 flex flex-col items-center justify-center hover:border-indigo-700 shadow-lg border border-gray-100">
+                        <div class="rounded-lg py-10 flex flex-col items-center justify-center hover:border-indigo-700 shadow-lg border border-gray-100 h-full">
                             <img src="metis-assets/images/typewriter-svgrepo-com.svg" class="w-16 h-auto" alt="" />
                             <p class="font-bold mt-4">Caption Generator</p>
-                            <p class="mt-2 text-sm text-gray-500">Engaging captions for all social media handles</p>
+                            <p class="mt-2 text-sm text-gray-500 px-2">Engaging captions for all social media handles</p>
                         </div>
                     </a>
                     <a class="" href="#">
-                        <div class="rounded-lg py-10 flex flex-col items-center justify-center hover:border-indigo-700 shadow-lg border border-gray-100">
+                        <div class="rounded-lg py-10 flex flex-col items-center justify-center hover:border-indigo-700 shadow-lg border border-gray-100 h-full">
                             <img src="metis-assets/images/artificial-intelligence-svgrepo-com.svg" class="w-16 h-auto" alt="" />
                             <p class="font-bold mt-4">Content Improver</p>
-                            <p class="mt-2 text-sm text-gray-500">Improve the content you have written with one click.</p>
+                            <p class="mt-2 text-sm text-gray-500 px-2">Improve the content you have written with one click.</p>
                         </div>
                     </a>
                     <a class="" href="#">
-                        <div class="rounded-lg py-10 flex flex-col items-center justify-center hover:border-indigo-700 shadow-lg border border-gray-100">
+                        <div class="rounded-lg py-10 flex flex-col items-center justify-center hover:border-indigo-700 shadow-lg border border-gray-100 h-full">
                             <img src="metis-assets/images/artificial-intelligence-svgrepo-com.svg" class="w-16 h-auto" alt="" />
                             <p class="font-bold mt-4">Quotes Suggestor</p>
-                            <p class="mt-2 text-sm text-gray-500">Get Quotes Suggestion for your specific need.</p>
+                            <p class="mt-2 text-sm text-gray-500 px-2">Get Quotes Suggestion for your specific need.</p>
                         </div>
                     </a>
                     <!-- <div class="rounded-lg py-10 flex flex-col items-center justify-center shadow-lg border border-gray-100">
