--- a/public/blog-section.html
+++ b/public/blog-section.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Quotes | Writee</title>
+        <title>Blog Section | Writee</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -93,50 +93,34 @@
         </header>
 
         <section class="mx-16 lg:mx-32 my-8">
-            <p class="font-bold text-center md:text-left text-6xl sm:text-6xl">Quote Generator</p>
+            <p class="font-bold text-center md:text-left text-5xl sm:text-6xl md:text-7xl pl-5">Blog Section</p>
         </section>
 
         <main class="mx-8 lg:mx-0 lg:my-2">
             <section class="relative flex flex-wrap w-full">
                 <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
                     <form action="" nme="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
-                        <!-- Drop Down Menu For Preferred Tone -->
+                        <input type="text" class="appearance-none w-full py-3 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow" placeholder="Enter The Topic" />
+
+                        <input type="number" class="appearance-none w-full py-3 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow" placeholder="Enter Number Of Words..." />
 
                         <div class="w-full relative">
                             <!-- Drop Down Arrow -->
                             <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none">&#8250;</div>
-                            <label class="text-gray-700" for="preferredTone">
-                                <select id="preferredTone" class="block font-medium w-full py-2 px-3 focus:outline-purple-500 bg-[#F9FAFC] rounded-md appearance-none shadow" name="preferredTone" autocomplete="off">
-                                    <option value="" disabled selected>Select Emotion</option>
-                                    <option value="happy">Happy</option>
-                                    <option value="sad">Sad</option>
+                            <label class="text-gray-700" for="preferredType">
+                                <select id="preferredType" class="block font-medium w-full py-2 px-4 focus:outline-purple-500 bg-[#F9FAFC] rounded-md appearance-none shadow" name="preferredType" autocomplete="off">
+                                    <option value="" disabled selected>Select Preferred Type</option>
+                                    <option value="informative">Informative</option>
+                                    <option value="marketing">Marketing</option>
+                                    <option value="nuanced">Nuanced</option>
                                     <option value="funny">Funny</option>
-                                    <option value="friendly">Friendly</option>
-                                    <option value="professional">Professional</option>
-                                    <option value="inspirational">Inspirational</option>
-                                    <option value="bold">Bold</option>
-                                    <option value="witty">Witty</option>
-                                    <option value="persuasive">Persuasive</option>
-                                    <option value="apologetic">Apologetic</option>
                                 </select>
                             </label>
                         </div>
 
-                        <div class="pt-2">
-                            <label class="text-gray-700" for="description">
-                                <textarea
-                                    class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow"
-                                    id="description"
-                                    name="description"
-                                    placeholder="Write What Type Of Quote You Wish..."
-                                    rows="4"
-                                    cols="40"
-                                ></textarea>
-                            </label>
-                        </div>
-                        <div class="flex items-center gap-4 pt-2">
-                            <button class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-8 py-3 overflow-hidden border rounded-lg border-indigo-600 group focus:outline-none focus:ring min-w-[180px]">Get Quote!</button>
-                            <button class="relative inline-block px-8 py-3 overflow-hidden border rounded-lg border-red-600 group focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[180px]">Reset Content</button>
+                        <div class="flex sm:flex-row items-center gap-4 pt-2">
+                            <button class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[100px] md:min-w-[180px] text-sm md:text-base">Get Blog Section</button>
+                            <button class="relative inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[100px] md:min-w-[180px]">Reset Content</button>
                         </div>
                     </form>
                 </div>
