--- a/public/blog.html
+++ b/public/blog.html
@@ -7,10 +7,10 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
-        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
     <body class="antialiased bg-body text-body font-body relative">
@@ -38,7 +38,7 @@
                                 <a class="text-blueGray-200 hover:underline" href="#">CATEGORY</a>
                                 <span class="text-blueGray-200">24 Jan, 2020</span>
                             </span>
-                            <h2 class="text-4xl md:text-5xl mt-4 text-white font-bold font-heading">Curabitur vestibulum odio maximus ipsum</h2>
+                            <h2 class="text-4xl md:text-5xl mt-4 text-white tracking-wide font-bold font-heading">Curabitur vestibulum odio maximus ipsum</h2>
                         </div>
                         <div class="flex justify-center mb-8">
                             <img class="w-12 h-12 object-cover rounded-full" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=60" alt="" />
