--- a/public/blogs.html
+++ b/public/blogs.html
@@ -7,9 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
     </head>
 
@@ -94,12 +94,12 @@
 
         <section class="py-10">
             <div class="container px-4 mx-auto">
-                <h2 class="mb-12 lg:mb-20 text-3xl md:text-4xl font-bold font-heading">Our Blog</h2>
+                <h2 class="mb-12 lg:mb-20 text-3xl md:text-4xl font-bold">Our Blog</h2>
 
                 <div class="flex flex-wrap -mx-4 mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pr-20 lg:pt-4 order-1 lg:order-0">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Development</span>
-                        <h3 class="my-4 text-xl md:text-2xl font-bold font-heading">Curabitur vestibulum odio maximus.</h3>
+                        <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
                         <p class="mb-4 text-sm md:text-base leading-loose text-blueGray-400">
                             Aenean tempus orci eu est ultrices hendrerit. Fusce suscipit, leo a semper venenatis, felis urna pulvinar nibh, vitae porta erat risus sed mauris. Vestibulum vehicula leo eget libero eleifend, quis dictum eros bibendum. Maecenas convallis tempor varius.
                         </p>
@@ -118,7 +118,7 @@
                 <div class="flex flex-wrap -mx-4 mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pl-20 lg:pt-4 order-1">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Startup</span>
-                        <h3 class="my-4 text-xl md:text-2xl font-bold font-heading">Curabitur vestibulum odio maximus.</h3>
+                        <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
                         <p class="mb-4 text-sm md:text-base leading-loose text-blueGray-400">
                             Aenean tempus orci eu est ultrices hendrerit. Fusce suscipit, leo a semper venenatis, felis urna pulvinar nibh, vitae porta erat risus sed mauris. Vestibulum vehicula leo eget libero eleifend, quis dictum eros bibendum. Maecenas convallis tempor varius.
                         </p>
@@ -137,7 +137,7 @@
                 <div class="flex flex-wrap -mx-4 mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pr-20 lg:pt-4 order-1 lg:order-0">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Startup</span>
-                        <h3 class="my-4 text-xl md:text-2xl font-bold font-heading">Curabitur vestibulum odio maximus.</h3>
+                        <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
                         <p class="mb-4 text-sm md:text-base leading-loose text-blueGray-400">
                             Aenean tempus orci eu est ultrices hendrerit. Fusce suscipit, leo a semper venenatis, felis urna pulvinar nibh, vitae porta erat risus sed mauris. Vestibulum vehicula leo eget libero eleifend, quis dictum eros bibendum. Maecenas convallis tempor varius.
                         </p>
@@ -156,7 +156,7 @@
                 <div class="flex flex-wrap -mx-4 mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pl-20 lg:pt-4 order-1">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Startup</span>
-                        <h3 class="my-4 text-xl md:text-2xl font-bold font-heading">Curabitur vestibulum odio maximus.</h3>
+                        <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
                         <p class="mb-4 text-sm md:text-base leading-loose text-blueGray-400">
                             Aenean tempus orci eu est ultrices hendrerit. Fusce suscipit, leo a semper venenatis, felis urna pulvinar nibh, vitae porta erat risus sed mauris. Vestibulum vehicula leo eget libero eleifend, quis dictum eros bibendum. Maecenas convallis tempor varius.
                         </p>
