--- a/public/caption.html
+++ b/public/caption.html
@@ -7,9 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
-        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
     </head>
 
@@ -92,16 +92,16 @@
             </div>
         </header>
 
-        <section class="mx-16 lg:mx-32 my-8">
+        <section class="mx-16 lg:mx-32 my-4">
             <div>
                 <p class="font-bold text-center md:text-left text-slate-400 text-sm md:text-xs mx-2">Beta</p>
-                <p class="font-bold text-center md:text-left text-6xl md:text-7xl sm:text-7xl lg:text-7xl">Generate Caption</p>
+                <p class="font-bold text-center md:text-left text-4xl sm:text-6xl md:text-7xl">Generate Caption</p>
             </div>
         </section>
 
-        <main class="mx-8 lg:mx-0 lg:my-2">
+        <main class="mx-8 lg:mx-0">
             <section class="relative flex flex-wrap w-full">
-                <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
+                <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-6 flex lg:justify-end">
                     <form action="" nme="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
                         <!-- Drop Down Menu For Preferred Tone -->
 
@@ -200,7 +200,7 @@
                     </form>
                 </div>
 
-                <div class="w-full px-4 py-6 lg:w-1/2 lg:px-4 sm:py-8 lg:py-8">
+                <div class="w-full px-4 py-6 lg:w-1/2 lg:px-4 sm:py-6 lg:py-6">
                     <label class="text-gray-700" for="content">
                         <textarea
                             class="flex-1 appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium lg:w-5/6"
