--- a/public/profile.html
+++ b/public/profile.html
@@ -2,17 +2,14 @@
 <html lang="en">
     <head>
         <title>Profile</title>
-
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="stylesheet" href="./css/output.css" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
-
+        <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
         <script defer src="./js/profile.js"></script>
     </head>
