--- a/public/signup.html
+++ b/public/signup.html
@@ -7,9 +7,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
         <script src="./js/main.js"></script>
     </head>
 
