--- a/public/trending-content.html
+++ b/public/trending-content.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Quotes | Writee</title>
+        <title>Generate Trending Content With Writee</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <header class="w-full shadow-sm">
+        <header class="w-full">
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
                 <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
@@ -24,7 +24,7 @@
                     <div class="lg:hidden">
                         <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
                             <svg class="fill-current h-4 w-4" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <title>Mobile Menu</title>
+                                <title>Mobile menu</title>
                                 <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
                             </svg>
                         </button>
@@ -93,50 +93,45 @@
         </header>
 
         <section class="mx-16 lg:mx-32 my-8">
-            <p class="font-bold text-center md:text-left text-6xl sm:text-6xl">Quote Generator</p>
+            <div>
+                <p class="font-bold text-center md:text-left text-slate-400 text-sm md:text-xs">Beta</p>
+                <p class="font-bold text-center md:text-left text-4xl sm:text-6xl md:text-7xl">Trending Content Generator</p>
+            </div>
         </section>
 
-        <main class="mx-8 lg:mx-0 lg:my-2">
+        <main class="mx-8 lg:mx-0">
             <section class="relative flex flex-wrap w-full">
                 <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
                     <form action="" nme="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
-                        <!-- Drop Down Menu For Preferred Tone -->
+                        <input type="text" class="appearance-none w-full py-4 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow" placeholder="Enter The Topic" />
+
+                        <!-- Drop Down Menu For Targeted Platform -->
 
                         <div class="w-full relative">
-                            <!-- Drop Down Arrow -->
                             <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none">&#8250;</div>
-                            <label class="text-gray-700" for="preferredTone">
-                                <select id="preferredTone" class="block font-medium w-full py-2 px-3 focus:outline-purple-500 bg-[#F9FAFC] rounded-md appearance-none shadow" name="preferredTone" autocomplete="off">
-                                    <option value="" disabled selected>Select Emotion</option>
-                                    <option value="happy">Happy</option>
-                                    <option value="sad">Sad</option>
-                                    <option value="funny">Funny</option>
-                                    <option value="friendly">Friendly</option>
-                                    <option value="professional">Professional</option>
-                                    <option value="inspirational">Inspirational</option>
-                                    <option value="bold">Bold</option>
-                                    <option value="witty">Witty</option>
-                                    <option value="persuasive">Persuasive</option>
-                                    <option value="apologetic">Apologetic</option>
+                            <label class="text-gray-700" for="targetedPlatform">
+                                <select id="targetedPlatform" class="block w-full py-3 px-4 bg-[#F9FAFC] rounded-md focus:outline-purple-500 font-medium appearance-none shadow" name="targetedPlatform" autocomplete="off">
+                                    <option value="" disabled selected>Select Targeted Platform</option>
+                                    <option value="facebook">Facebook</option>
+                                    <option value="twitter">Twitter</option>
+                                    <option value="instagram">Instagram</option>
+                                    <option value="linkedin">LinkedIn</option>
                                 </select>
                             </label>
                         </div>
 
-                        <div class="pt-2">
-                            <label class="text-gray-700" for="description">
-                                <textarea
-                                    class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow"
-                                    id="description"
-                                    name="description"
-                                    placeholder="Write What Type Of Quote You Wish..."
-                                    rows="4"
-                                    cols="40"
-                                ></textarea>
-                            </label>
+                        <!-- This checkbox is used to check if we have to generate hashtags too or not -->
+
+                        <div class="flex items-center py-1">
+                            <input type="checkbox" name="isHashtag" id="isHashtag" class="ml-2" />
+                            <label for="isHashtag" class="text-center align-middle mx-2 font-bold"> Generate Hashtags Too?</label>
                         </div>
-                        <div class="flex items-center gap-4 pt-2">
-                            <button class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-8 py-3 overflow-hidden border rounded-lg border-indigo-600 group focus:outline-none focus:ring min-w-[180px]">Get Quote!</button>
-                            <button class="relative inline-block px-8 py-3 overflow-hidden border rounded-lg border-red-600 group focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[180px]">Reset Content</button>
+
+                        <!-- reset content and create magic button -->
+
+                        <div class="flex sm:flex-row items-center gap-4 pt-2">
+                            <button class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[100px] md:min-w-[180px] text-sm md:text-base">Brew Content!</button>
+                            <button class="relative inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[100px] md:min-w-[180px]">Reset Content</button>
                         </div>
                     </form>
                 </div>
@@ -146,12 +141,13 @@
                         <textarea
                             class="flex-1 appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium lg:w-5/6 shadow"
                             id="content"
-                            placeholder="Magic Brewing..."
+                            placeholder="Content Is Brewing!!"
                             name="content"
-                            rows="9"
+                            rows="8"
                             cols="40"
                         ></textarea>
                     </label>
+                    <!-- <img class="absolute inset-0 object-cover w-full h-full" src="https://www.hyperui.dev/photos/team-1.jpeg" alt="" /> -->
                 </div>
             </section>
         </main>
