--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="stylesheet" href="./public/css/output.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
 
-        <script src="./public/js/main.js"></script>
+        <script src="./js/main.js"></script>
     </head>
 
-    <body class="antialiased bg-body text-body font-body">
+    <body class="antialiased w-full">
         <header class="w-full shadow-sm">
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
