--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="stylesheet" href="./public/css/output.css" />
+        <link rel="stylesheet" href="./css/output.css" />
         <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
 
-        <script src="./public/js/main.js"></script>
+        <script src="./js/main.js"></script>
     </head>
 
-    <body class="antialiased bg-body text-body font-body">
-        <header class="w-full">
+    <body class="antialiased w-full">
+        <header class="w-full shadow-sm">
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
 
                 <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none mr-14" href="./index.html">
+                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
                         <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
                     </a>
                     <div class="lg:hidden">
@@ -34,17 +34,14 @@
                         </button>
                     </div>
                     <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Product</a></li>
+                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
                     </ul>
-                    <div class="hidden lg:block">
-                        <a class="mr-2 inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="./signin.html">Log In</a
-                        ><a class="inline-block px-4 py-3 text-xs font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="./signup.html">Sign Up</a>
-                    </div>
+                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
                 </nav>
 
                 <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
