--- a/public/graphics-generator.html
+++ b/public/graphics-generator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Blog Outline | Writee</title>
+        <title>Graphics Generator | Writee</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -89,64 +89,56 @@
                 <!-- Nav ends -->
             </div>
         </header>
-
         <section class="mx-16 lg:mx-32 my-8">
-            <p class="font-bold text-center md:text-left text-4xl sm:text-6xl md:text-7xl pl-2">Blog Outline</p>
+            <p class="font-bold text-center md:text-left text-4xl sm:text-6xl md:text-7xl pl-2">Graphics Generator</p>
         </section>
 
-        <main class="mx-8 lg:mx-0 lg:my-2">
-            <section class="relative flex flex-wrap w-full">
-                <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
-                    <form action="" name="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
-                        <!-- Drop Down Menu For Preferred Tone -->
-
-                        <div class="pt-2">
-                            <label class="text-gray-700" for="description">
-                                <textarea
-                                    class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow"
-                                    id="description"
-                                    name="description"
-                                    placeholder="Give Us Topic And We Will Write The Blog."
-                                    rows="6"
-                                    cols="40"
-                                ></textarea>
-                            </label>
-                        </div>
-
-                        <div class="w-full relative">
-                            <!-- Drop Down Arrow -->
-                            <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none">&#8250;</div>
-                            <label class="text-gray-700" for="preferredType">
-                                <select id="preferredType" class="block font-medium w-full py-2 px-3 focus:outline-purple-500 bg-[#F9FAFC] rounded-md appearance-none shadow" name="preferredTone" autocomplete="off">
-                                    <option value="" disabled selected>Select Type</option>
-                                    <option value="informative">Informative</option>
-                                    <option value="marketing">Marketing</option>
-                                    <option value="nuanced">Nuanced</option>
-                                    <option value="funny">Funny</option>
-                                </select>
-                            </label>
-                        </div>
-
-                        <div class="flex sm:flex-row items-center gap-4 pt-2">
-                            <button class="text-indigo-600 hover:text-white hover:bg-indigo-600 px-8 py-3 border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[120px] md:min-w-[200px] text-sm md:text-base">Get Outline!</button>
-                            <button class="px-6 md:px-8 py-3 border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[120px] md:min-w-[200px]">Reset Content</button>
-                        </div>
-                    </form>
-                </div>
-
-                <div class="w-full px-4 py-6 lg:w-1/2 lg:px-4 sm:py-8 lg:py-8">
-                    <label class="text-gray-700" for="content">
-                        <textarea
-                            class="flex-1 appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium lg:w-5/6 shadow"
-                            id="content"
-                            placeholder="Please Wait. Your Content Is Brewing..."
-                            name="content"
-                            rows="11"
-                            cols="40"
-                        ></textarea>
+        <main class="mx-16 lg:mx-32 my-6">
+            <form action="" name="contentForm" class="w-full space-y-3">
+                <section class="w-full my-3">
+                    <p class="font-semibold text-center md:text-left text-2xl w-full pl-2">Describe Your Graphic In Detail</p>
+                </section>
+                <label class="text-gray-700" for="blogTopic">
+                    <textarea
+                        class="appearance-none w-full py-3 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow"
+                        id="blogTopic"
+                        placeholder="Describe Your Graphic In Detail"
+                        name="blogTopic"
+                        rows="9"
+                    ></textarea>
+                </label>
+                <section class="w-full my-3">
+                    <p class="font-semibold text-center md:text-left text-2xl w-full pl-2">Select Your Preferred Platform</p>
+                </section>
+                <div class="w-full relative">
+                    <!-- Drop Down Arrow -->
+                    <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none">&#8250;</div>
+                    <label class="text-gray-700" for="preferredPlatform">
+                        <select id="preferredPlatform" class="block font-medium w-full py-3 px-4 focus:outline-purple-500 bg-[#F9FAFC] rounded-md appearance-none shadow" name="preferredType" autocomplete="off">
+                            <option value="" disabled selected>Select Preferred Platform</option>
+                            <option value="youtube">Youtube</option>
+                            <option value="whatsapp">Whatsapp</option>
+                            <option value="instagram">Instagram</option>
+                            <option value="others">Others</option>
+                        </select>
                     </label>
                 </div>
-            </section>
+
+                <div class="flex sm:flex-row items-center justify-center gap-4 pt-2">
+                    <button id="submit" type="submit" class="text-indigo-600 hover:text-white hover:bg-indigo-600 px-8 py-3 border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[120px] md:min-w-[200px] text-sm md:text-base">Submit</button>
+                    <button id="reset" type="reset" class="px-6 md:px-8 py-3 border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[120px] md:min-w-[200px]">Reset</button>
+                </div>
+            </form>
+            <div id="output-image">
+                <div class="w-full flex justify-center mt-8 mb-8">
+                    <div class="flex justify-center flex-col">
+                        <div class="border border-indigo-600 w-fit aspect-square flex justify-center items-center p-5 rounded">
+                            <img src="./metis-assets/illustrations/compose-music.svg" alt="" />
+                        </div>
+                        <button id="download" class="mt-6 text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[180px] md:min-w-[140px] text-sm md:text-base">Download</button>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
