--- a/public/profile.html
+++ b/public/profile.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
-        <script src="./js/main.js"></script>
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <script defer src="./js/profile.js"></script>
+        <script src="./js/main.js"></script>
     </head>
     <body class="antialiased bg-body text-body font-body">
         <header class="w-full shadow-sm">
