--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="stylesheet" href="./css/output.css" />
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
 
         <script src="./js/main.js"></script>
