--- a/public/blog-section.html
+++ b/public/blog-section.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/output.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <script src="./js/main.js"></script>
     </head>
 
