changed facebook and google login option

--- a/public/signin.html
+++ b/public/signin.html
@@ -23,7 +23,7 @@
             <div class="container px-4 mx-auto">
                 <div class="relative flex flex-wrap">
                     <div class="lg:flex lg:flex-col w-full lg:w-1/2 py-6 lg:pr-20">
-                        <div class="flex justify-between items-center w-full mb-12 lg:mb-20">
+                        <div class="flex justify-between items-center w-full mb-10 lg:mb-20">
                             <a class="text-3xl font-semibold leading-none" href="../index.html">
                                 <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
                             </a>
@@ -31,7 +31,7 @@
                         </div>
                         <div class="w-full max-w-lg mx-auto lg:mx-0 my-auto">
                             <span class="text-sm text-blueGray-400">Sign In</span>
-                            <h4 class="mb-6 text-3xl">Brew Magical Content</h4>
+                            <h4 class="mb-6 text-3xl">Brew Magic</h4>
                             <div class="flex mb-4 px-4 bg-blueGray-50 rounded">
                                 <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="email" placeholder="name@email.com" />
                                 <svg class="h-6 w-6 ml-4 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -48,15 +48,17 @@
                                 </button>
                             </div>
                             <button class="block w-full p-4 text-center text-xs text-white font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded">Sign In</button>
-                            <p class="my-6 text-xs text-blueGray-400 text-center">or continue with</p>
-                            <button class="flex items-center w-full px-4 py-3 mb-2 text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
-                                <img class="h-6 pr-10" src="./metis-assets/logos/facebook-sign.svg" />
-                                <span>Sign In with Facebook</span>
-                            </button>
-                            <button class="flex items-center px-4 py-3 w-full text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
-                                <img class="h-6 pr-10" src="./metis-assets/logos/google-sign.svg" />
-                                <span>Sign In with Google</span>
-                            </button>
+                            <p class="my-4 text-xs text-blueGray-400 text-center">or continue with</p>
+                            <div class="grid grid-cols-2 gap-x-3">
+                                <button class="flex items-center w-full px-4 py-3 mb-2 text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
+                                    <img class="h-6 pr-6" src="./metis-assets/logos/facebook-sign.svg" />
+                                    <span>Facebook</span>
+                                </button>
+                                <button class="flex items-center w-full px-4 py-3 mb-2 text-xs text-blueGray-500 font-semibold leading-none border hover:bg-blueGray-50 rounded" href="#">
+                                    <img class="h-6 pr-6" src="./metis-assets/logos/google-sign.svg" />
+                                    <span>Google</span>
+                                </button>
+                            </div>
                         </div>
                         <div>
                             <p class="mt-8 text-xs text-blueGray-400 text-center lg:text-left"><a class="underline hover:text-blueGray-500" href="#">Police privacy</a> and <a class="underline hover:text-blueGray-500" href="#">Terms of Use</a></p>
