--- a/public/blogs.html
+++ b/public/blogs.html
@@ -11,90 +11,18 @@
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <script src="./js/main.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/footer.js"></script>
     </head>
 
     <body class="antialiased bg-body text-body font-body">
-        <header class="w-full shadow-sm">
-            <div class="container px-4 mx-auto">
-                <!-- Nav starts -->
-
-                <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
-                        <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
-                    </a>
-                    <div class="lg:hidden">
-                        <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
-                            <svg class="fill-current h-4 w-4" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <title>Mobile Menu</title>
-                                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
-                    </ul>
-                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
-                </nav>
-
-                <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
-                    <div class="navbar-backdrop fixed inset-0 bg-blueGray-800 opacity-25"></div>
-                    <nav class="relative flex flex-col py-6 px-6 w-full h-full bg-white border-r overflow-y-auto">
-                        <div class="flex items-center mb-8">
-                            <a class="mr-auto text-3xl font-semibold leading-none" href="./index.html">
-                                <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
-                            </a>
-                            <button class="navbar-close">
-                                <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                                </svg>
-                            </button>
-                        </div>
-                        <div>
-                            <ul>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Product</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Company</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Features</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./blogs.html">Blogs</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./team.html">Team</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./contact.html">Contact Us</a></li>
-                            </ul>
-                            <div class="mt-2 pt-6 border-t border-blueGray-100">
-                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a
-                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
-                            </div>
-                        </div>
-                        <div class="mt-auto">
-                            <p class="my-4 text-xs text-blueGray-400">
-                                <span>Get in Touch</span>
-                                <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
-                            </p>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                            </a>
-                        </div>
-                    </nav>
-                </div>
-
-                <!-- Nav ends -->
-            </div>
-        </header>
+        <header-component></header-component>
 
         <section class="py-10">
             <div class="container px-4 mx-auto">
-                <h2 class="mb-12 lg:mb-20 text-3xl md:text-4xl font-bold">Our Blog</h2>
+                <h2 class="mb-6 lg:mb-8 text-3xl md:text-4xl font-bold">Our Blog</h2>
 
-                <div class="flex flex-wrap -mx-4 mb-20">
+                <div class="flex flex-wrap mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pr-20 lg:pt-4 order-1 lg:order-0">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Development</span>
                         <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
@@ -113,7 +41,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-wrap -mx-4 mb-20">
+                <div class="flex flex-wrap mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pl-20 lg:pt-4 order-1">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Startup</span>
                         <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
@@ -132,7 +60,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-wrap -mx-4 mb-20">
+                <div class="flex flex-wrap mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pr-20 lg:pt-4 order-1 lg:order-0">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Startup</span>
                         <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
@@ -151,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="flex flex-wrap -mx-4 mb-20">
+                <div class="flex flex-wrap mb-20">
                     <div class="w-full lg:w-1/2 px-4 lg:pl-20 lg:pt-4 order-1">
                         <span class="inline-block py-1 px-3 uppercase text-xs font-semibold bg-blue-50 rounded-full text-blue-600">Startup</span>
                         <h3 class="my-4 text-xl md:text-2xl font-bold">Curabitur vestibulum odio maximus.</h3>
@@ -170,8 +98,11 @@
                     </div>
                 </div>
 
-                <div class="text-center"><a class="inline-block py-4 px-8 text-xs text-white font-semibold leading-none bg-blue-600 hover:bg-blue-700 rounded" href="#">Show all posts</a></div>
+                <div class="text-center">
+                    <button class="inline-block py-4 px-8 text-xs text-white font-semibold leading-none bg-blue-600 hover:bg-blue-700 rounded">Show All Posts</button>
+                </div>
             </div>
         </section>
+        <footer-component></footer-component>
     </body>
 </html>
