--- a/public/content-improver.html
+++ b/public/content-improver.html
@@ -11,124 +11,69 @@
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <script src="./js/main.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/footer.js"></script>
     </head>
 
     <body>
-        <header class="w-full shadow-sm">
-            <div class="container px-4 mx-auto">
-                <!-- Nav starts -->
+        <header-component></header-component>
+        <section class="mx-10 lg:mx-20 mt-6">
+            <p class="product-headings">Improve Your Content Here</p>
+        </section>
 
-                <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
-                        <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
-                    </a>
-                    <div class="lg:hidden">
-                        <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
-                            <svg class="fill-current h-4 w-4" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <title>Mobile Menu</title>
-                                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+        <main class="py-5 flex w-full justify-center">
+            <section class="w-11/12 px-4">
+                <section class="grid grid-rows-2 grid-cols-1 lg:grid-rows-1 lg:grid-cols-2 gap-2 md:gap-6 w-full">
+                    <div class="w-full flex justify-end">
+                        <textarea class="textarea-input" id="content-input" placeholder="Enter the content you want to improve" rows="15" name="content-input"></textarea>
+                    </div>
+
+                    <div class="w-full flex justify-start relative">
+                        <textarea class="textarea-output relative" id="content-output" placeholder="Get Your Content Here..." rows="15" name="content-output"></textarea>
+                        <button class="absolute bottom-3 right-3 z-10 p-2 active:bg-gray-200 focus:outline-none active:outline-none rounded" id="copy-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M22 6v16h-16v-16h16zm2-2h-20v20h20v-20zm-24 17v-21h21v2h-19v19h-2z" />
                             </svg>
                         </button>
                     </div>
-                    <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
-                    </ul>
-                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
-                </nav>
+                </section>
 
-                <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
-                    <div class="navbar-backdrop fixed inset-0 bg-blueGray-800 opacity-25"></div>
-                    <nav class="relative flex flex-col py-6 px-6 w-full h-full bg-white border-r overflow-y-auto">
-                        <div class="flex items-center mb-8">
-                            <a class="mr-auto text-3xl font-semibold leading-none" href="./index.html">
-                                <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
-                            </a>
-                            <button class="navbar-close">
-                                <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                                </svg>
-                            </button>
-                        </div>
-                        <div>
-                            <ul>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Product</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Company</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Features</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./blogs.html">Blogs</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./team.html">Team</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./contact.html">Contact Us</a></li>
-                            </ul>
-                            <div class="mt-2 pt-6 border-t border-blueGray-100">
-                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a
-                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
-                            </div>
-                        </div>
-                        <div class="mt-auto">
-                            <p class="my-4 text-xs text-blueGray-400">
-                                <span>Get in Touch</span>
-                                <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
-                            </p>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                            </a>
-                        </div>
-                    </nav>
-                </div>
-
-                <!-- Nav ends -->
-            </div>
-        </header>
-
-        <section class="mx-16 lg:mx-32 my-8">
-            <p class="font-bold text-center md:text-left text-4xl sm:text-6xl md:text-7xl pl-2">Improve Your Content Here</p>
-        </section>
-
-        <!-- <label class="text-gray-700 h-full" for="content">
-            <textarea
-                class="flex-1 appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium lg:w-5/6 shadow h-full min-h-[250px]"
-                id="content"
-                placeholder="Brewing Your Blog..."
-                name="content"
-                cols="40"
-            ></textarea>
-        </label> -->
-
-        <main class="mx-16 lg:mx-32 my-8">
-            <section class="grid grid-rows-2 grid-cols-1 lg:grid-rows-1 lg:grid-cols-2 gap-6 w-full">
-                <div class="w-full">
-                    <textarea
-                        class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium shadow"
-                        id="content-input"
-                        placeholder="Enter Your Content..."
-                        rows="13"
-                        name="content-input"
-                    ></textarea>
-                </div>
-                <div class="w-full">
-                    <textarea
-                        class="appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium shadow"
-                        id="content-output"
-                        placeholder="Get Your Content Here..."
-                        rows="13"
-                        name="content-output"
-                    ></textarea>
+                <div class="flex flex-col md:flex-row items-center justify-center gap-3 md:gap-6 w-full pt-5">
+                    <button id="submit" type="submit" class="blue-button">Submit</button>
+                    <button id="reset" type="reset" class="red-button">Reset</button>
                 </div>
             </section>
-            <div class="flex flex-col md:flex-row items-center justify-center gap-6 w-full pt-5">
-                <button id="submit" type="submit" class="text-indigo-600 hover:text-white hover:bg-indigo-600 px-8 py-3 border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[120px] md:min-w-[200px] text-sm md:text-base">Submit</button>
-                <button id="reset" type="reset" class="px-6 md:px-8 py-3 border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[120px] md:min-w-[200px]">Reset</button>
-            </div>
         </main>
+        <section class="how-to-use mx-8">
+            <section class="relative py-8 md:py-16 bg-white min-w-screen animation-fade animation-delay">
+                <div class="container px-8 mx-auto sm:px-12 xl:px-5">
+                    <p class="text-xs font-bold text-purple-500 uppercase sm:mx-6 text-center sm:text-normal sm:font-bold">Got a Question? We’ve got answers.</p>
+                    <h3 class="mt-1 text-2xl font-bold text-gray-800 sm:mx-6 sm:text-3xl md:text-4xl lg:text-5xl text-center">Frequently Asked Questions</h3>
+                    <div class="w-full px-6 py-6 mx-auto mt-10 bg-white border border-gray-200 rounded-lg sm:px-8 md:px-12 sm:py-8 sm:shadow lg:w-5/6 xl:w-2/3">
+                        <h3 class="text-lg font-bold text-indigo-700 sm:text-xl md:text-2xl">How does it work?</h3>
+                        <p class="mt-2 text-base text-gray-600 sm:text-lg md:text-normal">It's rather simple. All you need is to enter the you text and Writee will transform it into a well-written copy. P.S. You may have to try 2-3 times to get the most optimised result.</p>
+                    </div>
+                    <div class="w-full px-6 py-6 mx-auto mt-10 bg-white border border-gray-200 rounded-lg sm:px-8 md:px-12 sm:py-8 sm:shadow lg:w-5/6 xl:w-2/3">
+                        <h3 class="text-lg font-bold text-indigo-700 sm:text-xl md:text-2xl">How do I make changes?</h3>
+                        <p class="mt-2 text-base text-gray-600 sm:text-lg md:text-normal">The copy generated is editable. Just select the parts you want to edit and you’ll have your best-selling copy ready in seconds.</p>
+                    </div>
+                    <div class="w-full px-6 py-6 mx-auto mt-10 bg-white border border-gray-200 rounded-lg sm:px-8 md:px-12 sm:py-8 sm:shadow lg:w-5/6 xl:w-2/3">
+                        <h3 class="text-lg font-bold text-indigo-700 sm:text-xl md:text-2xl">Why is AI-Generated Quote Better?</h3>
+                        <p class="mt-2 text-base text-gray-600 sm:text-lg md:text-normal">There are more reasons than we can mention. This speed with this level of attention to detail is something that only an AI can do. This FAQ is written by Writee itself. Trust us yet?</p>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <footer-component></footer-component>
+
+        <script defer>
+            const contentOutput = document.getElementById('content-output');
+            const copyButton = document.getElementById('copy-button');
+            copyButton.onclick = function () {
+                contentOutput.select();
+                document.execCommand('copy');
+                window.getSelection().removeAllRanges();
+            };
+        </script>
     </body>
 </html>
