--- a/public/profile.html
+++ b/public/profile.html
@@ -12,86 +12,14 @@
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <script defer src="./js/profile.js"></script>
         <script src="./js/main.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/footer.js"></script>
     </head>
     <body class="antialiased bg-body text-body font-body">
-        <header class="w-full shadow-sm">
-            <div class="container px-4 mx-auto">
-                <!-- Nav starts -->
-
-                <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
-                        <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
-                    </a>
-                    <div class="lg:hidden">
-                        <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
-                            <svg class="fill-current h-4 w-4" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <title>Mobile Menu</title>
-                                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
-                    </ul>
-                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
-                </nav>
-
-                <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
-                    <div class="navbar-backdrop fixed inset-0 bg-blueGray-800 opacity-25"></div>
-                    <nav class="relative flex flex-col py-6 px-6 w-full h-full bg-white border-r overflow-y-auto">
-                        <div class="flex items-center mb-8">
-                            <a class="mr-auto text-3xl font-semibold leading-none" href="./index.html">
-                                <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
-                            </a>
-                            <button class="navbar-close">
-                                <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                                </svg>
-                            </button>
-                        </div>
-                        <div>
-                            <ul>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Product</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Company</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="#">Features</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./blogs.html">Blogs</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./team.html">Team</a></li>
-                                <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./contact.html">Contact Us</a></li>
-                            </ul>
-                            <div class="mt-2 pt-6 border-t border-blueGray-100">
-                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a
-                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
-                            </div>
-                        </div>
-                        <div class="mt-auto">
-                            <p class="my-4 text-xs text-blueGray-400">
-                                <span>Get in Touch</span>
-                                <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
-                            </p>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                            </a>
-                            <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                            </a>
-                        </div>
-                    </nav>
-                </div>
-
-                <!-- Nav ends -->
-            </div>
-        </header>
+        <header-component></header-component>
         <main class="">
             <form action="" id="information-form" method="post" class="px-6 md:px-20 w-full grid grid-flow-row md:grid-cols-[auto_350px]">
-                <div class="left-container pr-3">
+                <div class="left-container pr-3 mt-3">
                     <div class="personal-information">
                         <div class="w-full flex flex-row justify-between items-center pr-0 md:pr-4 lg:pr-14">
                             <h1 class="text-[60px] px-4 font-bold border-l-8 border-indigo-600">Personal</h1>
@@ -110,7 +38,7 @@
                                 <p class="ml-1 text-lg font-semibold">Cancel</p>
                             </button>
                         </div>
-                        <div class="bg-white py-4 shadow-sm rounded-sm text-gray-700 grid text-sm">
+                        <div class="bg-white py-4 rounded-sm text-gray-700 grid text-sm border-b border-gray-100 border-opacity-20">
                             <div class="flex justify-between flex-row md:grid md:grid-cols-2">
                                 <div class="px-4 py-2 font-semibold">Name</div>
                                 <div id="personal-name-show" class="px-4 py-2 form-data-show"></div>
@@ -130,9 +58,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="company-information mt-2">
+                    <div class="company-information mt-3">
                         <h1 class="text-[60px] px-4 font-bold border-l-8 border-indigo-600">Company</h1>
-                        <div class="bg-white py-4 shadow-sm rounded-sm text-gray-700 grid text-sm">
+                        <div class="bg-white py-4 rounded-sm text-gray-700 grid text-sm border-b border-gray-100 border-opacity-20">
                             <div class="flex justify-between flex-row md:grid md:grid-cols-2">
                                 <div class="px-4 py-2 font-semibold">Company Name</div>
                                 <div class="px-4 py-2 form-data-show" id="company-name-show"></div>
@@ -154,7 +82,7 @@
                     </div>
                 </div>
                 <div class="right-container">
-                    <h1 class="text-[42px] px-4 py-2 font-bold text-center border-b-2">Social Media</h1>
+                    <h1 class="text-[42px] px-4 py-2 font-bold text-center border-b border-opacity-20">Social Media</h1>
                     <div class="bg-white py-3 rounded-sm text-gray-700 grid text-sm space-y-5">
                         <div class="flex justify-between px-6 items-center">
                             <img src="./metis-assets/bw-social-icons/icons8-facebook.svg" class="h-10" />
@@ -210,5 +138,6 @@
                 </button>
             </div>
         </div>
+        <footer-component></footer-component>
     </body>
 </html>
